Fixing overflow #2

--- a/src/Mainframe.css
+++ b/src/Mainframe.css
@@ -4,7 +4,7 @@
     margin-top: 170px;
     min-height: calc(100vh - 170px);
     width: 100vw;
-    overflow: auto;
+    overflow: hidden;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
     transition: opacity 0.3s ease;
